# sviz

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  imgui.ini
cmake/: svizConfig.cmake.in
gui/: CMakeLists.txt
gui/example/: main.cpp  window.cpp
gui/include/ink/gui/: font.h  widget.h  window.h
gui/include/sviz/gui/: font.h  widget.h  window.h
gui/libs/: CMakeLists.txt
gui/src/: font.cpp  window.cpp
render/: CMakeLists.txt  gen_shader_h.sh
render/example/: main.cpp
render/include/ink/render/: camera.h  camera_controller.h  entity.h  grid.h  grid_renderer.h  marker_renderer.h  mesh.h  mesh_renderer.h  renderer.h  shader.h  viewport.h
render/shaders/: grid.fs  grid.vs  marker.fs  marker.vs  mesh.fs  mesh.vs
render/shaders/headers/shader/: grid_fs.h  grid_vs.h  marker_fs.h  marker_vs.h  mesh_fs.h  mesh_vs.h
render/src/: camera.cpp  camera_controller.cpp  grid_renderer.cpp  marker_renderer.cpp  mesh_renderer.cpp  shader.cpp  viewport.cpp
